# Ultimate-Tic-Tac-Toe

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  evaluator.py
MinMax/: Makefile
MinMax/src/: board.h  explored_position.h  main.cpp  minmax.h  move.h  score.h  transposition_table.h  ttt.h  zobrist.h
in/: begin0.in  begin1.in  draw.in  lose.in  win.in
src/: board.h  explored_position.h  main.cpp  main_mcts.cpp  main_minmax.cpp  main_random.cpp  mcts.h  minmax.h  move.h  random_bot.h  score.h  table.h  transposition_table.h  ttt.h  zobrist.h
src/common/: board.h  global_score.h  move.h  precomputed_win.h  score.h  ttt.h  ttt_utils.h  types.h
test/: CMakeLists.txt  test.cpp
